--- a/Notebooks/visualization.ipynb
+++ b/Notebooks/visualization.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,15 +176,19 @@
     "        pose[\"t\"] = pose[\"t\"].to(device)\n",
     "        pose[\"obj_id\"] = pose[\"obj_id\"].to(device)\n",
     "\n",
-    "    for obj_id in X[\"model_points_by_id\"]:\n",
-    "        X[\"model_points_by_id\"][obj_id] = X[\"model_points_by_id\"][obj_id].to(device)\n",
+    "    # for obj_id in X[\"model_points_by_id\"]:\n",
+    "    #     X[\"model_points_by_id\"][obj_id] = X[\"model_points_by_id\"][obj_id].to(device)\n",
     "\n",
-    "    return sample"
+    "    for extr in X.get(\"extrinsics\", []):\n",
+    "        extr[\"R_w2c\"] = extr[\"R_w2c\"].to(device)\n",
+    "        extr[\"t_w2c\"] = extr[\"t_w2c\"].to(device)\n",
+    "\n",
+    "    return sample\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +247,8 @@
     "with torch.no_grad():\n",
     "    detections, _ = model(\n",
     "        x_dict_views=X[\"views\"],\n",
-    "        K_list=K_list,\n",
+    "        K_list=X[\"K\"],\n",
+    "        extrinsics=X[\"extrinsics\"],  # pass extrinsics if model supports it\n",
     "        top_k=50\n",
     "    )\n",
     "\n",
@@ -312,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
